# LARA

./: .gitignore  README.md
code/qt_app/: CMakeLists.txt
code/robot/: roboclaw.h
designs/: GT2_belt_calculator.html  arm1.FCStd  arm2.FCStd  arm3-Body.dxf  arm3.FCStd  arm_assembly-Assemblyarm_high_1.dxf  arm_assembly-Assemblyarm_low_1.dxf  arm_assembly-Assemblyarms.FCStd  arm_assembly-Assemblyarms.dxf  arm_assembly-Assemblyarms2.dxf  arm_assembly.FCStd  arm_assembly2.FCStd  arm_assembly2.dxf  arm_assembly2_2.dxf  arm_assembly2_4x.dxf  arm_assembly3.FCStd  arm_assembly4.FCStd  arm_assembly_def.FCStd  arm_assembly_def2.FCStd  arm_assembly_def3.FCStd  arm_assembly_def3.dxf  arm_assembly_def3_cut.dxf  arm_assembly_def3_cut2.dxf  arm_base.FCStd  arm_pieces_v1.dxf  belts.txt  servo.FCStd  servo_reduced.FCStd  srv.FCStd  wrist.FCStd
designs/base/: base_abajo.FCStd  base_arriba.FCStd  base_arriba_2.FCStd  base_arriba_ranuras.FCStd
designs/covers/: bearing_cover.FCStd  bearing_cover_axis1.FCStd  bearing_cover_axis2.FCStd  bearing_ext_cover.FCStd  bearing_int_cover.FCStd  bearing_mid_cover.FCStd  espaciador_polea_gripper.FCStd  tapa_eje_exterior.FCStd  tapa_eje_interior.FCStd  tapa_rodam_exterior.FCStd  tapa_rodam_exterior_gripper.FCStd
designs/gripper/: beginning-Body.stl  beginning.FCStd  clamp.FCStd  end-Body.stl  end.FCStd  gear_free.FCStd  gear_free2-Body.stl  gear_free2.FCStd  gear_servo.FCStd  gear_servo_2-Body.stl  gear_servo_2.FCStd  nogear_free-Body.stl  nogear_free.FCStd  spacer-Body.stl  spacer.FCStd  testplate-Body.stl  testplate.FCStd
designs/pulleys/: gt2_20T_pulley.FCStd  gt2_24T_pulley_open.FCStd  gt2_24T_pulley_open_to_double.FCStd  gt2_24T_pulley_open_to_single.FCStd  gt2_25T_pulley.FCStd  gt2_25T_pulley_open.FCStd  gt2_30T_pulley.FCStd  gt2_48T_pulley.FCStd  gt2_48T_pulley_double.FCStd  (+7 more)
qt_app/: mainwindow.cpp  mainwindow.h
robot/: CMakeLists.txt  arm.cpp  arm.h  base.cpp  base.h  main.cpp  network.cpp  network.h  roboclaw.cpp  roboclaw.h  servo.cpp  servo.h
tests/: CMakeLists.txt  arm_test.cpp  base_test.cpp  lara.cpp  odometry.csv  odometry1.csv  odometry_test.cpp  odometry_test1.cpp  odometry_test2.cpp  odometry_test3.cpp  odometry_test4.cpp  odometry_vacio.csv  roboclawtest.cpp  servo_test.cpp  udp_motor.cpp  udp_motor_network.cpp  udp_motor_network_arm.cpp  udp_test.cpp
tests/encoder_test/: CMakeLists.txt  main.cpp
(+60 files in other folders)
